[package]
name = "rendercsv"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
anyhow = "1.0.86"
clap = { version = "4.5.13", default-features = false, features = ["derive", "help", "usage", "std"] }
csv = "1.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
imageproc = { version = "0.25.0", default-features = false }
palette = "0.7.6"
rusttype = "0.9.3"
