[package]
name = "rendercsv"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/rendercsv"
license = "MIT OR Apache-2.0"
description = "Command line tool to convert CSV table to a png picture"
categories = ["command-line-utilities"]
keywords = ["csv","png","csv2png","csv2pic"]

[dependencies]
ab_glyph = "0.2.28"
anyhow = "1.0.86"
clap = { version = "4.5.13", default-features = false, features = ["derive", "help", "usage", "std"] }
csv = "1.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
imageproc = { version = "0.25.0", default-features = false }
palette = "0.7.6"
